head first 设计模式读书笔记-观察者模式

--- a/0-设计模式入门.md
+++ b/0-设计模式入门.md
@@ -21,9 +21,9 @@
 
 **详见下图**
 
-![结构图](/HeadFirst设计模式/Resources/00-设计模式入门-01.png)
+![结构图](/Resources/00-设计模式入门-01.png)
 
-> 杂七杂八
+##### 杂七杂八
 
 ```
 - 说话的方式保持在模式层次，可让你待在”设计圈”久一点，不会被压低到对象和对这种琐碎的事情上面。
